--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -56,6 +56,13 @@ runs:
       shell: bash
       run: |
         brew install nasa-sw-vnv/core/ikos
+    - name: Install Infer
+      shell: bash
+      run: |
+        VERSION=1.2.0; \
+        curl -sSL "https://github.com/facebook/infer/releases/download/v$VERSION/infer-linux64-v$VERSION.tar.xz" \
+        | sudo tar -C /opt -xJ && \
+        sudo ln -s "/opt/infer-linux64-v$VERSION/bin/infer" /usr/local/bin/infer
     # - name: Corepack check
     #   shell: bash
     #   run: |
