--- a/.github/workflows/ikos.yml
+++ b/.github/workflows/ikos.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: ./.github/actions/setup
       - name: run ikos
         run: |
-          ikos-scan just config-examples
-          ikos-scan just build-examples
+          yes | ikos-scan just config-examples
+          yes | ikos-scan just build-examples
