--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,12 @@ jobs:
     uses: ./.github/workflows/infer-racerd.yml
   ikos:
     uses: ./.github/workflows/ikos.yml
-  frama-c:
-    uses: ./.github/workflows/frama-c.yml
-  coccinelle:
-    uses: ./.github/workflows/coccinelle.yml
+  # frama-c:
+  #   uses: ./.github/workflows/frama-c.yml
+  # coccinelle:
+  #   uses: ./.github/workflows/coccinelle.yml
+  rwop:
+    uses: ./.github/workflows/rwop.yml
   # coderrect no longer provide binary files
   # coderrect:
   #   uses: ./.github/workflows/coderrect.yml
