--- a/.github/workflows/rwop.yml
+++ b/.github/workflows/rwop.yml
@@ -2,24 +2,7 @@ name: Run RWOP on the Micro Benchmarks
 on:
   workflow_call:
 jobs:
-  build:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
-      - name: Build Binary
-        # run: zig build -Doptimize=ReleaseSafe --verbose-link --search-prefix ${{ github.workspace }}/llvm/lib
-        run: zig build -Doptimize=ReleaseSafe --verbose-link --search-prefix /usr/lib/llvm-18
-      - name: Run Test
-        # run: zig build test --search-prefix ${{ github.workspace }}/llvm/lib
-        run: zig build test --search-prefix /usr/lib/llvm-18
-      - name: Install Bin
-        run: sudo cp zig-out/bin/analysis /usr/local/bin/analysis
-  micros-fio:
+  micros:
     strategy:
       fail-fast: false
       matrix:
