fixup: infer install

--- a/.github/workflows/infer-racerd.yml
+++ b/.github/workflows/infer-racerd.yml
@@ -13,10 +13,7 @@ jobs:
       - uses: ./.github/actions/setup
       - name: Install Infer
         run: |
-          VERSION=1.2.0; \
-          curl -sSL "https://github.com/facebook/infer/releases/download/v$VERSION/infer-linux64-v$VERSION.tar.xz" \
-          | sudo tar -C /opt -xJ && \
-          sudo ln -s "/opt/infer-linux64-v$VERSION/bin/infer" /usr/local/bin/infer
+          curl -sSL https://github.com/facebook/infer/releases/download/v1.2.0/infer-linux-x86_64-v1.2.0.tar.xz | sudo tar -C /opt -xJ && sudo ln -s "/opt/infer-linux-x86_64-v1.2.0/bin/infer" /usr/local/bin/infer
       - name: config and run infer with --racerd-only
         run: |
           just config-examples
@@ -32,10 +29,7 @@ jobs:
       - uses: ./.github/actions/setup
       - name: Install Infer
         run: |
-          VERSION=1.2.0; \
-          curl -sSL "https://github.com/facebook/infer/releases/download/v$VERSION/infer-linux64-v$VERSION.tar.xz" \
-          | sudo tar -C /opt -xJ && \
-          sudo ln -s "/opt/infer-linux64-v$VERSION/bin/infer" /usr/local/bin/infer
+          curl -sSL https://github.com/facebook/infer/releases/download/v1.2.0/infer-linux-x86_64-v1.2.0.tar.xz | sudo tar -C /opt -xJ && sudo ln -s "/opt/infer-linux-x86_64-v1.2.0/bin/infer" /usr/local/bin/infer
       - name: config and run infer with --racerd-only
         run: |
           echo "Unimplemented"
