feat: collect result and run tests on micro benchmarks (#44)
* fixup: remove copied-files

* fixup: parse and analyze on tests

* feat: collect JSON result

* fixup: no node for now

* fixup: spell checking

* fixup: spell checking

* fixup: spell checking

* fixup: spell checking

* fixup: use latest LLVM

* fixup: use latest LLVM

* fixup: LLVM version

* fixup: action need specific LLVM version

* fixup: action need specific LLVM version: 17.0.6

* fixup: llvm paths

* fixup: enable all other workflow

* fixup: IKOS

* fixup: run setup

* fixup: check LLVM lib

* fixup: coderrect

* fixup: using llvm-18 on Github Action

* fixup: ikos need -e

* fixup: fix zig build options

* fixup: fix zig link libclang

* fixup: fix lib name

* fixup: correct ikos-scan

* fixup: correct linking

* fixup: fix ikos

* fixup: run on fio

* fixup

* fixup: run more tests

* fixup: split setup into workflows

* fixup: install libclang for needed headers

* fixup: more semantic name

* fixup: test results

* fixup: not support frama-c and coccinelle for now

* fixup: no dup job in rwop

* fixup: infer install

* fiuxp: split micros into different jobs

* fixup: should not use depth=1

* fixup: show generator result

* fixup: prefer cmake over meson

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
-      - name: Build
-        run: zig build -Doptimize=ReleaseSafe --verbose-link --search-prefix /usr/lib/llvm-14
+      - name: Build Binary
+        # run: zig build -Doptimize=ReleaseSafe --verbose-link --search-prefix ${{ github.workspace }}/llvm/lib
+        run: zig build -Doptimize=ReleaseSafe --verbose-link --search-prefix /usr/lib/llvm-18
       - name: Build tests
         run: |
           just config-examples
           just build-examples
       - name: Run Test
-        run: zig build test --search-prefix /usr/lib/llvm-14
+        # run: zig build test --search-prefix ${{ github.workspace }}/llvm/lib
+        run: zig build test --search-prefix /usr/lib/llvm-18
