--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -12,14 +12,21 @@ runs:
       with:
         version: 0.13.0
     - uses: extractions/setup-just@v2
-    - uses: KyleMayes/install-llvm-action@v2
-      with:
-        version: "17"
-        env: false
-        directory: ${{ github.workspace }}/llvm
+    - name: Install LLVM
+      shell: bash
+      run: |
+        wget https://apt.llvm.org/llvm.sh
+        chmod +x llvm.sh
+        sudo ./llvm.sh 18
+        # echo DIFF_LLVM_SHARED_LIB="LLVM-18" >> $GITHUB_ENV
+        # echo DIFF_clang_SHARED_LIB="clang-18" >> $GITHUB_ENV
+        sudo ln -s /usr/lib/llvm-18/lib/libclang-18.so.1 /usr/lib/libclang.so
+        sudo ln -s /usr/lib/llvm-18/lib/libLLVM-18.so /usr/lib/libLLVM.so
+        sudo apt-get install libclang-common-18-dev libclang-18-dev libclang1-18
     - name: Check Zig ENV
       shell: bash
-      run: zig env
+      run: |
+        zig env
     - name: Build libgit2, zlib
       shell: bash
       run: |
@@ -37,12 +44,12 @@ runs:
     - uses: cachix/install-nix-action@v27
       with:
         nix_path: nixpkgs=channel:nixos-unstable
+    - name: Setup CC, CXX using LLVM-18
+      shell: bash
+      run: |
+        echo CC="/usr/bin/clang-18" >> $GITHUB_ENV
+        echo CXX="/usr/bin/clang-cpp-18" >> $GITHUB_ENV
+    - uses: Homebrew/actions/setup-homebrew@master
     - uses: actions/setup-node@v4
       with:
         node-version: 22
-    - name: Corepack check
-      shell: bash
-      run: |
-        corepack enable
-        cd ${{ github.workspace }}
-        corepack prepare
