fiuxp: disable rwop auto run for now

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
   #   uses: ./.github/workflows/frama-c.yml
   # coccinelle:
   #   uses: ./.github/workflows/coccinelle.yml
-  rwop:
-    uses: ./.github/workflows/rwop.yml
+  # rwop:
+  #   uses: ./.github/workflows/rwop.yml
   # coderrect no longer provide binary files
   # coderrect:
   #   uses: ./.github/workflows/coderrect.yml
