fixup: correct building targets

--- a/analysis/CMakeLists.txt
+++ b/analysis/CMakeLists.txt
@@ -12,6 +12,9 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
 set(BUILD_SHARED_LIBS OFF)
 set(BUILD_TESTS OFF)
 set(BUILD_CLAR OFF)
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
+set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
 
 # Find LLVM and libclang
 find_package(LLVM REQUIRED CONFIG HINTS)
