--- a/.typos.toml
+++ b/.typos.toml
@@ -4,3 +4,6 @@
 
 [default.extend-words]
 egui = "egui" # Example for how to ignore a false positive
+
+[files]
+extend-exclude = ["./analysis/quill/"]
